fixing smaller switch being offcenter

--- a/packages/gestalt/src/Switch.css
+++ b/packages/gestalt/src/Switch.css
@@ -1,7 +1,7 @@
 :root {
   --g-switch-height: 24px;
   --g-vr-slider-height-on: 18px;
-  --g-vr-slider-height-off: 17px;
+  --g-vr-slider-height-off: 16px;
   --g-switch-width: 40px;
   --g-switch-border: 1px;
 }
